fixed alignement issue and set gradient background

--- a/app/static/css/homepage.css
+++ b/app/static/css/homepage.css
@@ -1,3 +1,3 @@
 body {
-    background-color: #008080;
+    background: linear-gradient(to right, #4B79A1, #283E51);
 }
